# runtime

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  composer.json  entrypoint.sh
config/: php-cgi.ini  php-fpm.ini  php.ini
fastcgi/: Cargo.toml
fastcgi-client/: Cargo.toml
fastcgi-client/src/: lib.rs
fastcgi/src/: lib.rs  protocol.rs
litespeed-client/: Cargo.toml
litespeed-client/src/: client.rs  connection.rs  definition.rs  env_variables.rs  error.rs  errors.rs  header.rs  http_headers.rs  lib.rs  packet_header.rs  request.rs  request_header.rs  statics.rs
old-fastcgi-client/src/: lambda.rs  params.rs
old-wp-runtime/dev/: lambda-database-check.php  lambda-headers-check.php  lambda-log.php
old-wp-runtime/prod/: composer.json  handler.php
old/wp-runtime-dev/: handler.php  lambda-internet-check.php
old/wp-runtime-dev/conf.dev.d/: php.ini
old/wp-runtime-prod/: lambda-errors.php
php-embed/: Cargo.toml
php-embed-sys/: Cargo.toml  build.rs  wrapper.h
php-embed-sys/src/: bindings.rs  lib.rs
php-embed/src/: main.rs
php-lambda/: Cargo.toml
php-layer/: Dockerfile  php-fpm.ini
php-layer/config/: php-fpm.conf
php-sys/: Cargo.toml  build.rs  wrapper.h
php-sys/src/: bindings.rs  main.rs
runtime/: Cargo.toml
runtime/src/: context.rs  fast_cgi.rs  handler.rs  main.rs  php_cgi.rs
src/: lambda-route.php  lambda-statics.php  main.rs  php-cgi.rs  php_cgi.rs
wp-runtime-prod/: lambda-statics.php
