[workspace]
resolver = "2"
members  = ["runtime", "fastcgi-client"]

[workspace.dependencies]
tokio              = { version = "1.36.0", default-features = false }
tracing            = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }
