[package]
name    = "fastcgi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes       = { version = "1.5.0", default-features = false }
static_init = { version = "1.0.3", default-features = false }
thiserror   = { version = "1.0.57", default-features = false }
tokio       = { workspace = true }
