[package]
name    = "litespeed-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes       = { version = "1.5.0", default-features = false }
lebe        = "0.5.2"
static_init = { version = "1.0.3", default-features = false }
tokio       = { workspace = true }
