[package]
name    = "runtime"
version = "0.1.0"
edition = "2021"


# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
regex-lite = { version = "0.1.5" }
elegant-departure = { version = "0.2.1", default-features = false, features = [
    "tokio",
] }
serde = { version = "1.0.196", default-features = false }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["ansi", "fmt"] }
lambda_http = { workspace = true }
